--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@swc/helpers": "^0.5.18",
+    "framer-motion": "^12.31.1",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
