--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.95.0",
     "@swc/helpers": "^0.5.18",
     "framer-motion": "^12.31.1",
     "next": "16.1.6",
